user type parts has its own collection, updated add traits
